--- a/change-password.html
+++ b/change-password.html
@@ -25,7 +25,7 @@
         </div>
         <div class=" ">
             <ul class="hidden md:flex gap-x-10" style="font-weight: 600; font-size: 16px; letter-spacing: 1px;">
-                <li class="hover:text-yellow-600"><a href=" ">Home</a></li>
+                <li class="hover:text-yellow-600"><a href="index.html">Home</a></li>
                 <li class="hover:text-yellow-600"><a href=" ">Creat Event</a></li>
                 <li class="hover:text-yellow-600"><a href=" ">Location</a></li>
             </ul>
