--- a/creat-event.html
+++ b/creat-event.html
@@ -27,7 +27,7 @@
         </a>
         <div class=" ">
             <ul class="hidden md:flex gap-x-10" style="font-weight: 600; font-size: 16px; letter-spacing: 1px;">
-                <li class="hover:text-yellow-600"><a href=" ">Home</a></li>
+                <li class="hover:text-yellow-600"><a href="index.html">Home</a></li>
                 <li class="hover:text-yellow-600"><a href="creat-event.html">Creat Event</a></li>
                 <li class="hover:text-yellow-600"><a href="Event-location.html">Location</a></li>
             </ul>
