--- a/payment metode.html
+++ b/payment metode.html
@@ -27,7 +27,7 @@
         <div class="navbar">
             <div class="mid">
                 <div class="nav">
-                    <a href="Homepage.html" class="angker">Home</a>
+                    <a href="index.html" class="angker">Home</a>
                     <div class="list"></div>
                 </div>
                 <div class="nav">
