--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
     </header>
 
     <article class="w-full px-[50px]">
-        <div class="relative w-full h-[700px] bg-yellow-400 rounded-2xl overflow-hidden py-[120px] px-[63px]">
-            <img class="absolute h-[700px]  top-0 left-0" src="asset/Mask Group.png" alt="elipse1">
+        <div class="relative w-full h-[700px] bg-yellow-400 rounded-[40px] overflow-hidden py-[120px] px-[63px]">
+            <img class="absolute h-[700px] w-full top-0 right-0" src="asset/Mask Group.png" alt="elipse1">
             <div class="ansolute w-full">
                 <div class="w-[160px] rounded-2xl flex mb-[30px] justify-center bg-yellow-600 shadow-lg">
                     <i class="text-white" data-feather="minus"></i><p class="text-white" style="letter-spacing: 1px;">LOCATION</p>
